separated footer and header

--- a/lab3.html
+++ b/lab3.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" type="text/css" href="css/last-minute-tours.css">
     <link rel="stylesheet" type="text/css" href="css/popular-destinations.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
-
+    <script src="js/addTemplate.js"></script>
 </head>
 <body>
 
-<header>
-    <img class="logo" src="images/logo.png">
-    <div class="menu-links">
-        <a href="">Готелі</a>
-        <a href="">Фрайчанзинг</a>
-        <a href="">Де купити</a>
-        <a href="">Пошук турів</a>
-    </div>
+<header id="header">
+<!--    <img class="logo" src="images/logo.png">-->
+<!--    <div class="menu-links">-->
+<!--        <a href="">Готелі</a>-->
+<!--        <a href="">Фрайчанзинг</a>-->
+<!--        <a href="">Де купити</a>-->
+<!--        <a href="">Пошук турів</a>-->
+<!--    </div>-->
 </header>
 
 <main>
@@ -166,14 +166,8 @@
         </div>
     </div>
 </main>
-<footer>
-    <p>Зв'яжіться з нами</p>
-    <div class="contacts">
-        <a href="tel:+380957958327"><i class="fa-solid fa-phone"></i> Подзвонити нам</a>
-        <a href="tg://resolve?domain=poehalisnamiofficial"><i class="fa-brands fa-telegram"></i> Знайти нас у Telegram</a>
-        <a href="mailto:pyatigorets2005@gmail.com"><i class="fa-solid fa-envelope"></i> Написати на пошту</a>
-        <a href="whatsapp://send?phone=+380957958327"><i class="fa-brands fa-square-whatsapp"></i> Знайти нас у WhatsApp</a>
-    </div>
+<footer id="footer">
+
 </footer>
 </body>
 </html>
