--- a/lab3.html
+++ b/lab3.html
@@ -15,15 +15,17 @@
 </head>
 <body>
 
-<header id="header">
-<!--    <img class="logo" src="images/logo.png">-->
-<!--    <div class="menu-links">-->
-<!--        <a href="">Готелі</a>-->
-<!--        <a href="">Фрайчанзинг</a>-->
-<!--        <a href="">Де купити</a>-->
-<!--        <a href="">Пошук турів</a>-->
-<!--    </div>-->
-</header>
+    <header id="header">
+    <!--    <img class="logo" src="images/logo.png">-->
+    <!--    <div class="menu-links">-->
+    <!--        <a href="">Готелі</a>-->
+    <!--        <a href="">Фрайчанзинг</a>-->
+    <!--        <a href="">Де купити</a>-->
+    <!--        <a href="">Пошук турів</a>-->
+    <!--    </div>-->
+<!--        тестую зміни-->
+
+    </header>
 
 <main>
     <div class="slider">
