- made some hierarchy in css and images

--- a/pages/main.html
+++ b/pages/main.html
@@ -6,11 +6,11 @@
     <script src="https://kit.fontawesome.com/018f2343ea.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <title>Лабораторна робота 3</title>
-    <link rel="stylesheet" type="text/css" href="../css/header.css">
-    <link rel="stylesheet" type="text/css" href="../css/slider.css">
-    <link rel="stylesheet" type="text/css" href="../css/last-minute-tours.css">
-    <link rel="stylesheet" type="text/css" href="../css/popular-destinations.css">
-    <link rel="stylesheet" type="text/css" href="../css/footer.css">
+    <link rel="stylesheet" type="text/css" href="../css/templates/header.css">
+    <link rel="stylesheet" type="text/css" href="../css/pages/main/slider.css">
+    <link rel="stylesheet" type="text/css" href="../css/pages/main/last-minute-tours.css">
+    <link rel="stylesheet" type="text/css" href="../css/pages/main/popular-destinations.css">
+    <link rel="stylesheet" type="text/css" href="../css/templates/footer.css">
     <script src="../js/addTemplate.js"></script>
 </head>
 <body>
@@ -36,16 +36,16 @@
             <input type="radio" name="r" id="r4">
 
             <div class="slide s1">
-                <a href="#"><img src="../images/slider/1.png" alt="Изображение" class="img"></a>
+                <a href="#"><img src="../images/pages/main/slider/1.png" alt="Изображение" class="img"></a>
             </div>
             <div class="slide">
-                <a href="#"><img src="../images/slider/2.png" alt="Изображение" class="img"></a>
+                <a href="#"><img src="../images/pages/main/slider/2.png" alt="Изображение" class="img"></a>
             </div>
             <div class="slide">
-                <a href="#"><img src="../images/slider/3.png" alt="Изображение" class="img"></a>
+                <a href="#"><img src="../images/pages/main/slider/3.png" alt="Изображение" class="img"></a>
             </div>
             <div class="slide">
-                <a href="#"><img src="../images/slider/4.png" alt="Изображение" class="img"></a>
+                <a href="#"><img src="../images/pages/main/slider/4.png" alt="Изображение" class="img"></a>
             </div>
         </div>
         <div class="navigation">
@@ -59,7 +59,7 @@
         <h1>Гарячі тури</h1>
         <div class="container">
             <div class="product">
-                <img class="product-img" src="../images/last-minute-tours/1.png" alt="tee">
+                <img class="product-img" src="../images/pages/main/last-minute-tours/1.png" alt="tee">
                 <div class="product-info">
                     <div class="title">Ring Beach 5</div>
                     <div class="country">Туреччина, Кемер</div>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="product">
-                <img class="product-img" src="../images/last-minute-tours/2.png" alt="tee">
+                <img class="product-img" src="../images/pages/main/last-minute-tours/2.png" alt="tee">
                 <div class="product-info">
                     <div class="title">Loxia Comfort Beach Alanya, 5</div>
                     <div class="country">Туреччина, Анталія</div>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="product">
-                <img class="product-img" src="../images/last-minute-tours/3.png" alt="tee">
+                <img class="product-img" src="../images/pages/main/last-minute-tours/3.png" alt="tee">
                 <div class="product-info">
                     <div class="title">Tropitel Naama Bay, 5</div>
                     <div class="country">Єгипет, Шарм-ель-Шейх</div>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="product">
-                <img class="product-img" src="../images/last-minute-tours/4.png" alt="tee">
+                <img class="product-img" src="../images/pages/main/last-minute-tours/4.png" alt="tee">
                 <div class="product-info">
                     <div class="title">Jaz Mirabel Beach, 5</div>
                     <div class="country">Єгипет, Шарм-ель-Шейх</div>
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="product">
-                <img class="product-img" src="../images/last-minute-tours/5.png" alt="tee">
+                <img class="product-img" src="../images/pages/main/last-minute-tours/5.png" alt="tee">
                 <div class="product-info">
                     <div class="title">Araliya Beach Hotel, 5</div>
                     <div class="country">Шрі-Ланка, Унаватуна</div>
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="product">
-                <img class="product-img" src="../images/last-minute-tours/6.png" alt="tee">
+                <img class="product-img" src="../images/pages/main/last-minute-tours/6.png" alt="tee">
                 <div class="product-info">
                     <div class="title">Gortyna Hotel, 3</div>
                     <div class="country">Греція, Ретімно (о. Крит)</div>
@@ -124,42 +124,42 @@
         <h1>Популярні напрямки зараз</h1>
         <div class="container">
             <div class="pop-product">
-                <a href="#"><img src="../images/popular-destinations/1.jpg" alt="popular"></a>
+                <a href="#"><img src="../images/pages/main/popular-destinations/1.jpg" alt="popular"></a>
                 <div class="pop-product-info">
                     <div class="pop-country">Туреччина<br> від 22 598 грн</div>
                     <div class="pop-place">з Києва і Львова</div>
                 </div>
             </div>
             <div class="pop-product">
-                <img src="../images/popular-destinations/2.jpeg" alt="popular">
+                <img src="../images/pages/main/popular-destinations/2.jpeg" alt="popular">
                 <div class="pop-product-info">
                     <div class="pop-country">Іспанія<br> від 25 058 грн</div>
                     <div class="pop-place">з Києва і Варшави</div>
                 </div>
             </div>
             <div class="pop-product">
-                <img src="../images/popular-destinations/3.jpeg" alt="popular">
+                <img src="../images/pages/main/popular-destinations/3.jpeg" alt="popular">
                 <div class="pop-product-info">
                     <div class="pop-country">Італія<br> від 19 562 грн</div>
                     <div class="pop-place">з Києва і Одеси</div>
                 </div>
             </div>
             <div class="pop-product">
-                <img src="../images/popular-destinations/4.jpeg" alt="popular">
+                <img src="../images/pages/main/popular-destinations/4.jpeg" alt="popular">
                 <div class="pop-product-info">
                     <div class="pop-country">Австрія<br> від 27 912 грн</div>
                     <div class="pop-place">з Києва і Одеси</div>
                 </div>
             </div>
             <div class="pop-product">
-                <img src="../images/popular-destinations/5.jpeg" alt="popular">
+                <img src="../images/pages/main/popular-destinations/5.jpeg" alt="popular">
                 <div class="pop-product-info">
                     <div class="pop-country">Норвегія<br> від 32 172 грн</div>
                     <div class="pop-place">з Києва</div>
                 </div>
             </div>
             <div class="pop-product">
-                <img src="../images/popular-destinations/6.jpeg" alt="popular">
+                <img src="../images/pages/main/popular-destinations/6.jpeg" alt="popular">
                 <div class="pop-product-info">
                     <div class="pop-country">Єгипет<br> від 18 159 грн</div>
                     <div class="pop-place">з Києва і Одеси</div>
