--- a/lab3.html
+++ b/lab3.html
@@ -15,15 +15,7 @@
 </head>
 <body>
 
-<header id="header">
-<!--    <img class="logo" src="images/logo.png">-->
-<!--    <div class="menu-links">-->
-<!--        <a href="">Готелі</a>-->
-<!--        <a href="">Фрайчанзинг</a>-->
-<!--        <a href="">Де купити</a>-->
-<!--        <a href="">Пошук турів</a>-->
-<!--    </div>-->
-</header>
+<header id="header"></header>
 
 <main>
     <div class="slider">
@@ -166,8 +158,7 @@
         </div>
     </div>
 </main>
-<footer id="footer">
 
-</footer>
+<footer id="footer"></footer>
 </body>
 </html>
