Fixed bug with header/footer

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -9,12 +9,12 @@
     <meta charset="UTF-8">
 
     <!--Styles dependency -->
-    <link rel="stylesheet" type="text/css" href="css/header.css">
-    <link rel="stylesheet" type="text/css" href="css/footer.css">
-    <link rel="stylesheet" type="text/css" href="css/faq/faq.css">
+    <link rel="stylesheet" type="text/css" href="../css/templates/header.css">
+    <link rel="stylesheet" type="text/css" href="../css/templates/footer.css">
+    <link rel="stylesheet" type="text/css" href="../css/faq/faq.css">
 
     <!--Scrip-->
-    <script src="js/addTemplate.js"></script> <!--Add block Footer and Header-->
+    <script src="../js/addTemplate.js"></script> <!--Add block Footer and Header-->
 </head>
 <body>
 
@@ -165,5 +165,5 @@
 
 <footer id="footer"></footer>
 </body>
-<script src="js/faqsSection.js"></script> <!--Animation for FAQs-->
+<script src="../js/faqsSection.js"></script> <!--Animation for FAQs-->
 </html>
