upgrades in login html and css

--- a/pages/login.html
+++ b/pages/login.html
@@ -22,7 +22,8 @@
                     <input placeholder="Електронна пошта" type="email" name="email" id="email" autocomplete="off">
                     <input placeholder="Пароль" type="password" name="password" id="password" autocomplete="off">
                 </div>
-                <button type="submit">Увійти</button>
+                <a href="../pages/main.html">Увійти</a>
+<!--                <button type="submit">Увійти</button>-->
             </form>
         </section>
     </div>
