- added page about us

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -11,7 +11,7 @@
     <!--Styles dependency -->
     <link rel="stylesheet" type="text/css" href="../css/templates/header.css">
     <link rel="stylesheet" type="text/css" href="../css/templates/footer.css">
-    <link rel="stylesheet" type="text/css" href="../css/faq/faq.css">
+    <link rel="stylesheet" type="text/css" href="../css/pages/faq/faq.css">
 
     <!--Scrip-->
     <script src="../js/addTemplate.js"></script> <!--Add block Footer and Header-->
