--- a/pages/login.html
+++ b/pages/login.html
@@ -22,9 +22,15 @@
                     <input placeholder="Електронна пошта" type="email" name="email" id="email" autocomplete="off">
                     <input placeholder="Пароль" type="password" name="password" id="password" autocomplete="off">
                 </div>
+
                 <a href="../pages/main.html">Увійти</a>
+
 <!--                <button type="submit">Увійти</button>-->
             </form>
+            <div class="signup-link">
+                <p>Не маєте акаунту?</p>
+                <a href="../pages/signup.html">Створити акаунт</a>
+            </div>
         </section>
     </div>
 </body>
