--- a/pages/admin.html
+++ b/pages/admin.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="../css/pages/admin/admin.css">
+    <script src="https://kit.fontawesome.com/018f2343ea.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -88,21 +89,30 @@
                 </div>
                 <div class="data status">
                     <span class="data-title">Status</span>
-                    <span class="data-list">Active</span>
-                    <span class="data-list">Active</span>
-                    <span class="data-list">Active</span>
-                    <span class="data-list">Active</span>
-                    <span class="data-list">Active</span>
-                    <span class="data-list">Active</span>
+                    <span class="data-list"><i class="fa-solid fa-check"></i> Active</span>
+                    <span class="data-list"><i class="fa-solid fa-check"></i> Active</span>
+                    <span class="data-list"><i class="fa-solid fa-check"></i> Active</span>
+                    <span class="data-list"><i class="fa-solid fa-check"></i> Active</span>
+                    <span class="data-list"><i class="fa-solid fa-check"></i> Active</span>
+                    <span class="data-list"><i class="fa-solid fa-check"></i> Active</span>
                 </div>
                 <div class="data edit">
                     <span class="data-title">Edit</span>
-                    <span class="data-list">Liked</span>
-                    <span class="data-list">Liked</span>
-                    <span class="data-list">Liked</span>
-                    <span class="data-list">Liked</span>
-                    <span class="data-list">Liked</span>
-                    <span class="data-list">Liked</span>
+                    <span class="data-list"><i class="fa-solid fa-pen-to-square"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-pen-to-square"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-pen-to-square"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-pen-to-square"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-pen-to-square"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-pen-to-square"></i></span>
+                </div>
+                <div class="data edit">
+                    <span class="data-title">Delete</span>
+                    <span class="data-list"><i class="fa-solid fa-trash"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-trash"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-trash"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-trash"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-trash"></i></span>
+                    <span class="data-list"><i class="fa-solid fa-trash"></i></span>
                 </div>
             </div>
         </div>
