created necessary files

--- a/pages/login.html
+++ b/pages/login.html
@@ -29,7 +29,7 @@
             </form>
             <div class="signup-link">
                 <p>Не маєте акаунту?</p>
-                <a href="../pages/signup.html">Створити акаунт</a>
+                <a href="signup.html">Створити акаунт</a>
             </div>
         </section>
     </div>
