worked on the table.html

--- a/pages/registration.html
+++ b/pages/registration.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Зареєструватися</title>
-<!--    <script src="../../js/addTemplate.js"></script>-->
-    <script src="https://github.com/L1tosh/Web--Travel-/blob/0a60229d8f4f6cf4c9cbb34cbaff2df0fdd04f40/js/addTemplate.js"></script>
+    <script src="../js/addTemplate.js"></script>
+    <link rel="stylesheet" href="../css/templates/table.css">
 </head>
 <body>
 <section>
