- moved some files

--- a/pages/calculations.html
+++ b/pages/calculations.html
@@ -49,8 +49,8 @@
         </div>
     </div>
 </main>
-<script src="../js/calculations/rect.js"></script>
-<script src="../js/calculations/dayOfBirth.js"></script>
+<script src="../js/lab-5/rect.js"></script>
+<script src="../js/lab-5/dayOfBirth.js"></script>
 <footer id="footer"></footer>
 </body>
 </html>
