--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Увійти</title>
-    <link rel="stylesheet" type="text/css" href="../css/pages/login/general.css">
+    <link rel="stylesheet" type="text/css" href="../css/pages/general.css">
     <link rel="stylesheet" type="text/css" href="../css/pages/login/section.css">
 </head>
 <body>
