--- a/pages/signup.html
+++ b/pages/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Зареєструватись</title>
-    <link rel="stylesheet" type="text/css" href="../css/pages/signup/general.css">
+    <link rel="stylesheet" type="text/css" href="../css/pages/general.css">
     <link rel="stylesheet" type="text/css" href="../css/pages/signup/section.css">
 </head>
 <body>
