--- a/pages/chat.html
+++ b/pages/chat.html
@@ -47,7 +47,7 @@
 </div>
 
 <footer id="footer"></footer>
-<script src="../js/chat.js"></script>
-<script src="../js/transliter.js"></script>
+<script src="../js/lab-5/chat.js"></script>
+<script src="../js/lab-5/transliter.js"></script>
 </body>
 </html>
