- remade the table, added the ability to delete/duplicateÑ

--- a/pages/registration.html
+++ b/pages/registration.html
@@ -4,91 +4,77 @@
     <meta charset="UTF-8">
     <title>Зареєструватися</title>
     <script src="../js/addTemplate.js"></script>
-    <link rel="stylesheet" href="../css/templates/table.css">
     <link rel="stylesheet" href="../css/pages/registration/registration.css">
-    <link rel="stylesheet" href="../css/pages/admin/admin.css">
+    <link rel="stylesheet" href="../css/pages/registration/table.css">
 </head>
 <body>
 <section>
     <div class="signup-container">
-        <div class="text">
-            <h1>Туристичне агенство</h1>
-            <p>Введіть свої дані для створення облікового запису:</p>
-        </div>
-        <div id="registration">
-            <div class="main-info">
-                <input placeholder="Ім'я" type="text" name="inline" id="firstname">
-                <span id="firstname-error" class="error"></span>
-                <input placeholder="По батькові" type="text" name="inline" id="middlename">
-                <span id="middlename-error" class="error"></span>
-                <input placeholder="Прізвище" type="text" name="inline" id="lastname">
-                <span id="lastname-error" class="error"></span>
-                <input placeholder="Електронна пошта" type="text" autocomplete="off" id="email">
-                <span id="email-error" class="error"></span>
-                <input placeholder="Телефон: +38(0" type="tel" name="phone" autocomplete="off" id="phone" class="phone-input" >
-                <span id="phone-error" class="error"></span>
-                <input placeholder="Пароль" type="password" autocomplete="off" id="password">
-                <span id="password-error" class="error"></span>
-                <input placeholder="Повторіть пароль" type="password"  autocomplete="off" id="password-repeat">
-                <span id="password-repeat-error" class="error"></span>
+        <form id="data-form">
+            <div class="text">
+                <h1>Туристичне агенство</h1>
+                <p>Введіть свої дані для створення облікового запису:</p>
             </div>
-            <div class="date">
-                <label for="date">Дата народження:</label>
-                <input type="date" name="inline" id="date">
-                <span id="date-error" class="error"></span>
-            </div>
-            <div class="gender">
-                <label for="date">Стать:</label>
-                <input type="radio" name="gender" value="male" id="male"> <label for="male">Чоловік</label>
-                <input type="radio" name="gender" value="female" id="female"> <label for="female">Жінка</label><br>
-                <span id="gender-error" class="error"></span>
-            </div>
-            <div class="user-image">
-                <label for="file">Завантажте своє фото:</label>
-                <input type="file" name="inline" id="file">
-                <span id="file-error" class="error"></span>
-            </div>
-            <button id="button">Створити акаунт</button>
-            <div class="empty"></div>
+            <div id="registration">
+                <div class="main-info">
+                    <input placeholder="Ім'я" type="text" name="inline" id="firstname">
+                    <span id="firstname-error" class="error"></span>
+                    <input placeholder="По батькові" type="text" name="inline" id="middlename">
+                    <span id="middlename-error" class="error"></span>
+                    <input placeholder="Прізвище" type="text" name="inline" id="lastname">
+                    <span id="lastname-error" class="error"></span>
+                    <input placeholder="Електронна пошта" type="text" autocomplete="off" id="email">
+                    <span id="email-error" class="error"></span>
+                    <input placeholder="Телефон: +38(0" type="tel" name="phone" autocomplete="off" id="phone"
+                           class="phone-input">
+                    <span id="phone-error" class="error"></span>
+                    <input placeholder="Пароль" type="password" autocomplete="off" id="password">
+                    <span id="password-error" class="error"></span>
+                    <input placeholder="Повторіть пароль" type="password" autocomplete="off" id="password-repeat">
+                    <span id="password-repeat-error" class="error"></span>
+                </div>
+                <div class="date">
+                    <label for="date">Дата народження:</label>
+                    <input type="date" name="inline" id="date">
+                    <span id="date-error" class="error"></span>
+                </div>
+                <div class="gender">
+                    <label for="date">Стать:</label>
+                    <input type="radio" name="gender" value="male" id="male"> <label for="male">Чоловік</label>
+                    <input type="radio" name="gender" value="female" id="female"> <label for="female">Жінка</label><br>
+                    <span id="gender-error" class="error"></span>
+                </div>
+                <div class="user-image">
+                    <label for="file">Завантажте своє фото:</label>
+                    <input type="file" name="inline" id="file">
+                    <span id="file-error" class="error"></span>
+                </div>
+                <button id="button">Створити акаунт</button>
+                <div class="empty"></div>
 
-        </div>
+            </div>
+        </form>
     </div>
+
 </section>
 
 <section class="table-container">
-    <div class="checkbox">
-        <span class="checkbox-title">Вибір користувача</span>
-    </div>
-    <div class="copy">
-        <button id="copy-title">Дублювати</button>
-    </div>
-    <div class="delete">
-        <button id="delete-title">Видалити</button>
-    </div>
-    <div class="surname">
-        <span class="surname-title">Прізвище</span>
-    </div>
-    <div class="name">
-        <span class="name-title">Ім'я</span>
-    </div>
-    <div class="middlename">
-        <span class="middlename-title">По батькові</span>
-    </div>
-    <div class="email">
-        <span class="email-title">Електронна пошта</span>
-
-    </div>
-    <div class="phone">
-        <span class="phone-title">Телефон</span>
-    </div>
-    <div class="password">
-        <span class="password-title">Пароль</span>
-    </div>
-    <div class="tabledate">
-        <span class="date-title">Дата народження</span>
-    </div>
-    <div class="tablegender">
-        <span class="tablegender-title">Стать</span>
+    <table id="data-table">
+        <tr>
+            <th>Вибір користувача</th>
+            <th>Прізвище</th>
+            <th>Ім'я</th>
+            <th>По батькові</th>
+            <th>Електронна пошта</th>
+            <th>Телефон</th>
+            <th>Пароль</th>
+            <th>Дата народження</th>
+            <th>Стать</th>
+        </tr>
+    </table>
+    <div class="button">
+        <button id="delete-button" class="action-button">Видалити вибрані</button>
+        <button id="duplicate-button" class="action-button">Дублювати вибрані</button>
     </div>
 </section>
 <script src="../js/lab-6/fieldChecking.js"></script>
