minor decorative changes

--- a/pages/registration.html
+++ b/pages/registration.html
@@ -59,19 +59,19 @@
 </section>
 
 <section class="table-container">
-    <table id="data-table">
-        <tr>
-            <th>Вибір користувача</th>
-            <th>Прізвище</th>
-            <th>Ім'я</th>
-            <th>По батькові</th>
-            <th>Електронна пошта</th>
-            <th>Телефон</th>
-            <th>Пароль</th>
-            <th>Дата народження</th>
-            <th>Стать</th>
-        </tr>
-    </table>
+        <table id="data-table">
+            <tr>
+                <th>Вибір</th>
+                <th>Прізвище</th>
+                <th>Ім'я</th>
+                <th>По батькові</th>
+                <th>Електронна пошта</th>
+                <th>Телефон</th>
+                <th>Пароль</th>
+                <th>Дата народження</th>
+                <th>Стать</th>
+            </tr>
+        </table>
     <div class="button">
         <button id="delete-button" class="action-button">Видалити вибрані</button>
         <button id="duplicate-button" class="action-button">Дублювати вибрані</button>
